# agent-flow

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sample_workflow.json
alembic/: env.py
app/: main.py
app/config/: database.py  settings.py
app/controllers/: chat_controller.py  workflow_controller.py
app/models/: workflow.py
app/routes/: __init__.py  chat.py  workflows.py
app/schemas/: chat_schemas.py  workflow_schemas.py
app/services/: chat_service.py  workflow_engine.py
app/temporal/: constants.py  worker.py
app/temporal/activities/: node_activities.py
app/temporal/workflows/: agent_workflow.py
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
